mutants.out/log/src__tls.rs_line_52_col_9.log

*** src/tls.rs:52:9: replace TlsStream<TokioTcpStream>::connect -> Result<Self, Error> with Ok(Default::default())

*** mutation diff:
--- src/tls.rs
+++ replace TlsStream<TokioTcpStream>::connect -> Result<Self, Error> with Ok(Default::default())
@@ -44,21 +44,17 @@
     /// made to
     ///
     /// ```text
     /// tcp://localhost:7419
     /// ```
     ///
     /// If `url` is given, but does not specify a port, it defaults to 7419.
     pub async fn connect(url: Option<&str>) -> Result<Self, Error> {
-        TlsStream::with_connector(
-            TlsConnector::builder().build().map_err(Error::TlsStream)?,
-            url,
-        )
-        .await
+        Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
     }
 
     /// Create a new TLS connection over TCP using a non-default TLS configuration.
     ///
     /// See `connect` for details about the `url` parameter.
     pub async fn with_connector(connector: TlsConnector, url: Option<&str>) -> Result<Self, Error> {
         let url = match url {
             Some(url) => utils::url_parse(url),


*** /home/pavel/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo build --tests --manifest-path /tmp/cargo-mutants-faktory-rs-3ziugm.tmp/Cargo.toml
   Compiling faktory v0.12.5 (/tmp/cargo-mutants-faktory-rs-3ziugm.tmp)
    Finished dev [unoptimized + debuginfo] target(s) in 0.84s

*** result: Success

*** /home/pavel/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo test --manifest-path /tmp/cargo-mutants-faktory-rs-3ziugm.tmp/Cargo.toml --locked --all-features --all-targets
   Compiling faktory v0.12.5 (/tmp/cargo-mutants-faktory-rs-3ziugm.tmp)
error[E0277]: the trait bound `tls::TlsStream<tokio::net::TcpStream>: Default` is not satisfied
  --> src/tls.rs:52:12
   |
52 |         Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
   |            ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `tls::TlsStream<tokio::net::TcpStream>`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `faktory` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `faktory` (lib test) due to 1 previous error

*** result: Failure(101)
